2005-09-16  Timothy Brownawell  <tbrownaw@gmail.com>

	* netcmd.{cc,hh}, netsync.cc: new netcmd types: usher_cmd and
	usher_reply_cmd. They are not included in the HMAC, and do not
	occur during normal communication. Purpose: running multiple servers
	from the same port. This allows a special server to ask for the
	client's include pattern, and then forward the connection to a real
	monotone server.

2005-09-15  Timothy Brownawell  <tbrownaw@gmail.com>

	* app_state.{cc,hh}: restrictions now understand --exclude
	* commands.cc: commit and revert now take OPT_EXCLUDE
	* monotone.cc: update description of --exclude
	* tests/t_restriction_with_exclude.at: new test
	* testsuite.at: add it

2005-09-14  Timothy Brownawell  <tbrownaw@gmail.com>

	* contrib/ciabot_monotone_hookversion.py: CIA bot client script
	meant to be called from the note_netsync_revision_received hook.
	* lua.{cc,hh}: hook_note_commit and hook_note_netsync_revision_received
	now take the text of the revision as an argument.
	* netsync.cc, commands.cc: Give hooks new argument.
	* monotone.texi: Update documentation for those hooks.

2005-09-11  Benoît Dejean  <benoit@placenet.org>

	* database.cc
	* database_check.cc
	* netsync.cc
	* po/POTFILES.in
	* po/POTFILES.skip
	* rcs_import.cc: More i18n strings.

2005-09-07  Jim Meyering  <jim@meyering.net>
	
	* tests/t_rename_dir_cross_level.at: When invoking mv to rename
	a directory, do not include a trailing slash on the target -- that
	is not portable.                                                  
                       
	* Makefile.am (TESTS_ENVIRONMENT): Ensure that PATH starts with
	the current directory, so we test the just-built monotone binary,
	not some older version.                                          

2005-09-07  Benoît Dejean  <benoit@placenet.org>

	* std_hooks.lua: Don't spawn emacs with '-no-init-file'.

2005-09-09  Matthew Gregan  <kinetik@orcon.net.nz>

	* paths.cc (save_initial_path): Default Boost's fs::path to